# etc/Makefile.am

###############################################################################

# Additional file to be added to the distribution
EXTRA_DIST =    \
                 omapl138 \
                 panda \
                 tci66xx \
                 run_lad.sh
						
###############################################################################
